ver1.2.0: ported to Arduino IDE 0019

--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,16 @@ Post messages to Twitter (tweet) from <a target="arduino" href="http://www.ardui
 <p class="step">Step <span class="n">2</span> : 
 	<a href="javascript:step2()">Add some Libraries to your Arduino IDE.</a>
 	<div class="cd" id="step2"><ul>
-	<li>Download the <a href="ArduinoTweetLib.zip">Arduino Tweet Library</a> and put Twitter folder into ~/Documents/Arduino/libraries (Mac) or My Documents\Arduino\libraries\ (Windows). If there is no such folder, please create it.<br>
-	<li>Download the <a href="ArduinoEthernet.zip">Arduino Ethernet Library</a> and install <b><i>EthernetDNS</i></b> and <b><i>EthernetDHCP</i></b> into ~/Documents/Arduino/libraries (Mac) or My Documents\Arduino\libraries\ (Windows). EthernetDHCP is optional, but used in the sample sketch in step3.
-	<ul><li>EthernetDNS library in this archive is patched to avoid an error by CNAME entry in the DNS response. <b>Twitter library won't work without this patch</b>, so please replace it if you already have the library. Original version is distributed at <a href="http://gkaindl.com/software/arduino-ethernet">gkaindl.com</a>.</ul>
+	<li><b>for Arduino IDE 0019 or later</b><ul>
+		<li>Download the <a href="Library-Twitter-1.2.0.zip">Arduino Tweet Library</a> and put Twitter folder into ~/Documents/Arduino/libraries (Mac) or My Documents\Arduino\libraries\ (Windows). If there is no such folder, please create it.<br>
+		<li>Download the <a href="EthernetDNS-0019.zip">EthernetDNS Library</a> and install it.
+		<ul><li>EthernetDNS library in this archive is patched to work with Udp library in IDE 0019 or later. Original version (distributed at <a href="http://gkaindl.com/software/arduino-ethernet">gkaindl.com</a>) currently does not support IDE 0019 or later.</ul>
+	</ul>
+	<li><b>for Arduino IDE 0018 or earlier</b><ul>
+		<li>Download the <a href="ArduinoTweetLib.zip">Arduino Tweet Library</a> and put Twitter folder into ~/Documents/Arduino/libraries (Mac) or My Documents\Arduino\libraries\ (Windows). If there is no such folder, please create it.<br>
+		<li>Download the <a href="ArduinoEthernet.zip">Arduino Ethernet Library</a> and install <b><i>EthernetDNS</i></b> and <b><i>EthernetDHCP</i></b>.
+		<ul><li>EthernetDNS library in this archive is patched to avoid an error by CNAME entry in the DNS response. <b>Twitter library won't work without this patch</b>, so please replace it if you already have the library. Original version is distributed at <a href="http://gkaindl.com/software/arduino-ethernet">gkaindl.com</a>.</ul>
+	</ul>
 	<li>Re-launch the IDE.
 	<li><a href="http://www.arduino.cc/en/Hacking/Libraries" class="ext" target="arduino">Detailed information about libraries installation</a>.
 	</div>
@@ -44,21 +51,25 @@ Post messages to Twitter (tweet) from <a target="arduino" href="http://www.ardui
 	<a href="javascript:step3()">Run a sample sketch to tweet!</a>
 	<div class="cd" id="step3">
 	You can get this sketch from File menu > Examples > Twitter > SimplePost .<br>
-	Don't forget to add your token into the sketch.
+	Don't forget to add your token into the sketch.<br>
+	<b>Notice</b>: This example is for IDE 0019 or later.
+	<b>Notice</b>: the library uses this site as a proxy server for OAuth stuff. Your tweet may not be applied during maintenance of this site.
 	<hr><code><pre>
+#include &lt;SPI.h&gt;
 #include &lt;Ethernet.h&gt;
-#include &lt;EthernetDHCP.h&gt;
+#include &lt;UDP.h&gt;
 #include &lt;EthernetDNS.h&gt;
 #include &lt;Twitter.h&gt;
 
 byte mac[] = { 0xDE, 0xAD, 0xBE, 0xEF, 0xFE, 0xED };
+byte ip[] = { 10, 0, 0, 177 };
 Twitter twitter("<b>&lt;&lt;&lt; your token here &gt;&gt;&gt;</b>");
 char msg[] = "Hello, World! I'm Arduino!";
 
 void setup()
 {
   delay(1000);
-  EthernetDHCP.begin(mac);
+  Ethernet.begin(mac, ip);
   Serial.begin(9600);
   
   Serial.println("connecting ...");
@@ -77,7 +88,6 @@ void setup()
 
 void loop()
 {
-  EthernetDHCP.maintain();
 }
 	</pre></code>
 	</div>
