Reimplemented in Python
Reimplemented using Python to reduce cost and response delay for launching
Java instances.

twitter_oauth_handler.py is based on https://github.com/tav/tweetapp .

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@ Post messages to Twitter (tweet) from <a target="arduino" href="http://www.ardui
 <div id="c">
 <h3>How to begin:</h3>
 <p class="step">Step <span class="n">1</span> : 
-	<a target="twitter" href="/request_token">Get a token to post a message using OAuth.</a></p>
+	<a target="twitter" href="/oauth/twitter/login">Get a token to post a message using OAuth.</a></p>
 <p class="step">Step <span class="n">2</span> : 
 	<a href="javascript:step2()">Add some Libraries to your Arduino IDE.</a>
 	<div class="cd" id="step2"><ul>
