--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@ function toggleDisplay(ele) {
 <div id="fc">
 <h1>Tweet Library for Arduino</h1>
 <hr>
-Post messages to Twitter (tweet) from <a target="arduino" href="http://www.arduino.cc/" class="ext"><b>Aruduino</b></a> with <a target="arduino" href="http://www.arduino.cc/en/Main/ArduinoEthernetShield" class="ext"><b>Ethernet Shield</b></a>!
+Post messages to Twitter (tweet) from <a target="arduino" href="http://www.arduino.cc/" class="ext"><b>Arduino</b></a> with <a target="arduino" href="http://www.arduino.cc/en/Main/ArduinoEthernetShield" class="ext"><b>Ethernet Shield</b></a>!
 </div>
 <br style="clear:both">
 <div id="c">
